objects/ASI_HK_CRM_Pre_Approval_Form__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Achievement_for_Conditional__c</fullName>
        <label>Achievement % for Conditional Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Achievement_for_Variable__c</fullName>
        <label>Achievement % for Variable Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approved_Date__c</fullName>
        <description>Approved Date</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BA_Comment__c</fullName>
        <label>BA Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms</relationshipLabel>
        <relationshipName>Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commitment_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commitment No.</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms</relationshipLabel>
        <relationshipName>Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commitment_Status__c</fullName>
        <formula>TEXT(ASI_CRM_Commitment_No__r.ASI_MFM_Status__c)</formula>
        <label>Commitment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Converted_Date__c</fullName>
        <label>Plan Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms</relationshipLabel>
        <relationshipName>Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Community_Marketing_COUNT__c</fullName>
        <label>Community Marketing COUNT</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Pre_Approval_Form_Item__c.ASI_CRM_HK_Community_Marketing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Pre_Approval_Form_Item__c.ASI_HK_CRM_Pre_Approval_Form_Lookup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Customer_FormulaName__c</fullName>
        <formula>ASI_HK_CRM_PAF_Customer__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Is_Channel_PAF__c</fullName>
        <formula>AND(BEGINS(UPPER(ASI_HK_CRM_PAF_Customer__r.Name),&quot;OUTLET_&quot;) ,BEGINS(ASI_HK_CRM_PAF_Customer__r.ASI_HK_CRM_Customer_Number__c, &quot;9&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Channel PAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_PAF_no_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L - Reference PAF #2</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (P&amp;L - Reference PAF #2)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_PAF_no_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L - Reference PAF #3</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (P&amp;L - Reference PAF #3)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_PAF_no_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L - Reference PAF #4</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (P&amp;L - Reference PAF #4)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_PAF_no__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L - Reference PAF #</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms</relationshipLabel>
        <relationshipName>Lookup_PAF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pl_volume1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Volume #1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pl_volume2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for P&amp;L</description>
        <label>Include Volume #2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pl_volume3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Volume #3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Trade_Marketing_COUNT__c</fullName>
        <label>Trade Marketing COUNT</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Pre_Approval_Form_Item__c.ASI_CRM_HK_Trade_Marketing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Pre_Approval_Form_Item__c.ASI_HK_CRM_Pre_Approval_Form_Lookup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentives_for_Conditional__c</fullName>
        <label>Incentives % for Conditional Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentives_for_Variable__c</fullName>
        <label>Incentives % for Variable Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LY_Plan_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LY Plan 1</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (LY Plan 1)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LY_Plan_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LY Plan 2</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (LY Plan 2)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LY_Plan_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LY Plan 3</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (LY Plan 3)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Month_for_Print_Out__c</fullName>
        <defaultValue>3</defaultValue>
        <label>No. of Month for Print-Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Outlets__c</fullName>
        <label>No. of Outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Grade__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_CN_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletImage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Region__c</fullName>
        <label>Outlet Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_Set_Approved_Date__c</fullName>
        <label>Price Set Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_Set_Completed_Date__c</fullName>
        <label>Price Set Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_Set_Generation_Status__c</fullName>
        <label>Price Set Generation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>SA Rejected</fullName>
                </value>
                <value>
                    <fullName>Hub Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_Set_Submission_Date__c</fullName>
        <label>Price Set Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>•	Historical PAF
•	Pouring contract
•	Listing agreement
•	Promotional Price 
•	Festive Promotion</inlineHelpText>
        <label>Promotion Category</label>
        <referenceTo>ASI_CRM_Promotion_Category__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms</relationshipLabel>
        <relationshipName>Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ref_End_Date__c</fullName>
        <label>P&amp;L - Reference Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ref_Start_Date__c</fullName>
        <label>P&amp;L - Reference Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Potential__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Sales_Potential__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Representative__c</fullName>
        <formula>ASI_HK_CRM_PAF_Customer__r.Owner.FirstName +&apos; &apos;+ ASI_HK_CRM_PAF_Customer__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Short_Term_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ASI_MFM_Sub_Channel__c.ASI_CRM_CN_Channel__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.ASI_CRM_Channel__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms</relationshipLabel>
        <relationshipName>Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier_Id__c</fullName>
        <label>Supplier Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Channel_Av_CATAP_NS__c</fullName>
        <label>Channel Av. CATAP/NS%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Channel_Av_Investment_Ratio__c</fullName>
        <label>Channel Av Investment Ratio%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Channel_Av__c</fullName>
        <label>Channel Av. ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_LY_PAF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LY PAF</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Forms (LY PAF)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Outlet_Contract_Rebate__c</fullName>
        <label>Outlet Contract Rebate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Supplier__c</fullName>
        <label>Supplier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_T1_Contract_Rebate__c</fullName>
        <label>T1 Contract Rebate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_T2_Contract_Rebate__c</fullName>
        <label>T2 Contract Rebate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Valid_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Adjusted_End_Date__c</fullName>
        <label>Adjusted End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Adjusted_Start_Date__c</fullName>
        <label>Adjusted Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_All_Sub_Brand_VFI_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VFI% Exceeded for any Sub-brand?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Benchmark_Investment_Amount__c</fullName>
        <label>Benchmark Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Benchmark__c</fullName>
        <label>Benchmark%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Conditions_of_Payment__c</fullName>
        <description>Used by ASI HK CRM to summarize all Conditions of Payment for each Mechanic used in a PAF</description>
        <label>Conditions of Payment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Contract_Details__c</fullName>
        <label>Contract Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Error_Message__c</fullName>
        <formula>if(
AND(ISBLANK(ASI_HK_CRM_Adjusted_Start_Date__c), ISBLANK(ASI_HK_CRM_Adjusted_End_Date__c),
NOT(OR(
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;SA Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;Reject Final&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;Supervisor Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;Draft&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;HS Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;MD Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;First Reject&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;SA Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;FD Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;FM Rejected&quot;), 
ISPICKVAL( ASI_HK_CRM_PAF_Status__c, &quot;MKTD Rejected&quot;)
))
), &quot;You cannot submit the PAF in the current status&quot;,
IF(
AND(
NOT(ISBLANK(ASI_HK_CRM_Adjusted_Start_Date__c)), NOT(ISBLANK(ASI_HK_CRM_Adjusted_End_Date__c)),
OR(
ISPICKVAL(ASI_HK_CRM_PAF_Status__c, &quot;MD Final&quot;),
ISPICKVAL(ASI_HK_CRM_PAF_Status__c, &quot;MKTD Approved&quot;),
ISPICKVAL(ASI_HK_CRM_PAF_Status__c, &quot;FM Approved&quot;)
), ASI_HK_CRM_SYS_Start_Date_Difference__c &gt; 3
), &quot;The adjusted start date is more than 3 months from the original start date.&quot;,
IF(AND(
NOT(ISBLANK(ASI_HK_CRM_Adjusted_Start_Date__c)), NOT(ISBLANK(ASI_HK_CRM_Adjusted_End_Date__c)),
OR(
ISPICKVAL(ASI_HK_CRM_PAF_Status__c, &quot;MD Final&quot;),
ISPICKVAL(ASI_HK_CRM_PAF_Status__c, &quot;MKTD Approved&quot;),
ISPICKVAL(ASI_HK_CRM_PAF_Status__c, &quot;FM Approved&quot;)
), ASI_HK_CRM_SYS_Different_Duration__c), &quot;The adjusted contract duration is different from the original contract duration.&quot;, &quot;&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_ExceedTshInvestmentAmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed Threshold Investment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_ExceedTshInvestmentPercent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed Threshold Investment %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Expiry_Date__c</fullName>
        <formula>IF( AND(
         !ISNULL(ASI_HK_CRM_Adjusted_End_Date__c), 
         ASI_HK_CRM_Adjusted_End_Date__c !=  ASI_HK_CRM_PAF_End_Date__c
    )
, ASI_HK_CRM_Adjusted_End_Date__c
, ASI_HK_CRM_PAF_End_Date__c)</formula>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>ASI HK CRM External ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Other_Comments__c</fullName>
        <label>Other Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_All_TC_Confirm_w_Cust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All T&amp;C Confirmed With Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Brand_Owner__c</fullName>
        <label>Brand Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pernod Ricard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Contract_Requirement__c</fullName>
        <label>Contract Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Customer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for P&amp;L</description>
        <label>Customer (P&amp;L) #2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Approval Forms (Customer #2 (P&amp;L))</relationshipLabel>
        <relationshipName>Pre_Approval_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Customer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>P&amp;L</description>
        <label>Customer (P&amp;L) #3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Approval Forms (Customer (P&amp;L) #3)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Customer4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for P&amp;L</description>
        <label>Customer (P&amp;L) #4</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Approval Forms (Customer (P&amp;L) #4)</relationshipLabel>
        <relationshipName>Pre_Approval_Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Nature_of_Promotion__c</fullName>
        <label>Nature of Promotion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_No_of_Months__c</fullName>
        <formula>IF ( 
ISBLANK(ASI_HK_CRM_Adjusted_End_Date__c ) &amp;&amp; ISBLANK( ASI_HK_CRM_Adjusted_Start_Date__c ),
IF(
MONTH(ASI_HK_CRM_PAF_End_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c) = 0, 1, 
IF(DAY(ASI_HK_CRM_PAF_End_Date__c) &gt;= DAY(ASI_HK_CRM_PAF_Start_Date__c), MONTH(ASI_HK_CRM_PAF_End_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c) + 1, 
MONTH(ASI_HK_CRM_PAF_End_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c))
),
IF(
MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) - MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ) = 0, 1, 
IF(DAY( ASI_HK_CRM_Adjusted_End_Date__c ) &gt;= DAY( ASI_HK_CRM_Adjusted_Start_Date__c ), MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) - MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ) + 1, 
MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) - MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ))
)
)
+
IF ( 
ISBLANK(ASI_HK_CRM_Adjusted_End_Date__c ) &amp;&amp; ISBLANK( ASI_HK_CRM_Adjusted_Start_Date__c ),
(YEAR(ASI_HK_CRM_PAF_End_Date__c) - YEAR(ASI_HK_CRM_PAF_Start_Date__c))*12,
(YEAR( ASI_HK_CRM_Adjusted_End_Date__c ) - YEAR( ASI_HK_CRM_Adjusted_Start_Date__c ))*12
)
+
IF(
AND(MONTH(ASI_HK_CRM_PAF_End_Date__c) = MONTH(ASI_HK_CRM_PAF_Start_Date__c),
YEAR(ASI_HK_CRM_PAF_End_Date__c) &lt;&gt; YEAR(ASI_HK_CRM_PAF_Start_Date__c),
ISBLANK(ASI_HK_CRM_Adjusted_End_Date__c ) &amp;&amp; ISBLANK( ASI_HK_CRM_Adjusted_Start_Date__c ),
DAY(ASI_HK_CRM_PAF_End_Date__c) &lt; DAY(ASI_HK_CRM_PAF_Start_Date__c)
), -1,
IF(AND(MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) = MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ),
YEAR( ASI_HK_CRM_Adjusted_End_Date__c ) &lt;&gt; YEAR( ASI_HK_CRM_Adjusted_Start_Date__c ),
DAY( ASI_HK_CRM_Adjusted_End_Date__c ) &lt; DAY( ASI_HK_CRM_Adjusted_Start_Date__c )
), -1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Raised_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending for Workflow</fullName>
                </value>
                <value>
                    <fullName>SA Rejected</fullName>
                </value>
                <value>
                    <fullName>SA Reviewed</fullName>
                </value>
                <value>
                    <fullName>First Reject</fullName>
                </value>
                <value>
                    <fullName>Reject Final</fullName>
                </value>
                <value>
                    <fullName>Date changed</fullName>
                </value>
                <value>
                    <fullName>FD Approved</fullName>
                </value>
                <value>
                    <fullName>FD Rejected</fullName>
                </value>
                <value>
                    <fullName>FM Approved</fullName>
                </value>
                <value>
                    <fullName>FM Rejected</fullName>
                </value>
                <value>
                    <fullName>MD Final</fullName>
                </value>
                <value>
                    <fullName>MD Rejected</fullName>
                </value>
                <value>
                    <fullName>MKTD Approved</fullName>
                </value>
                <value>
                    <fullName>MKTD Rejected</fullName>
                </value>
                <value>
                    <fullName>HS Approved</fullName>
                </value>
                <value>
                    <fullName>HS Rejected</fullName>
                </value>
                <value>
                    <fullName>Supervisor Approved</fullName>
                </value>
                <value>
                    <fullName>Supervisor Rejected</fullName>
                </value>
                <value>
                    <fullName>Confirmed with Customer</fullName>
                </value>
                <value>
                    <fullName>Approve Final</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Version_No__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Incremented every time the PAF has been rejected and sent back to salesman for re-editing, or due to Change of Date edit by Sales Admin</description>
        <label>Version No.</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_PAF_Volume_Commitment__c</fullName>
        <label>Volume Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Different_Duration__c</fullName>
        <formula>IF(
MONTH(ASI_HK_CRM_PAF_End_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c) = 0, 1,
IF(DAY(ASI_HK_CRM_PAF_End_Date__c) &gt;= DAY(ASI_HK_CRM_PAF_Start_Date__c), MONTH(ASI_HK_CRM_PAF_End_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c) + 1,
MONTH(ASI_HK_CRM_PAF_End_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c))
)
+
(YEAR(ASI_HK_CRM_PAF_End_Date__c) - YEAR(ASI_HK_CRM_PAF_Start_Date__c))*12
&lt;&gt;
IF(
MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) - MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ) = 0, 1,
IF(DAY( ASI_HK_CRM_Adjusted_End_Date__c ) &gt;= DAY( ASI_HK_CRM_Adjusted_Start_Date__c ), MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) - MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ) + 1,
MONTH( ASI_HK_CRM_Adjusted_End_Date__c ) - MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ))
)
+
(YEAR( ASI_HK_CRM_Adjusted_End_Date__c ) - YEAR( ASI_HK_CRM_Adjusted_Start_Date__c ))*12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Different from Orginal Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Fiscal_Year__c</fullName>
        <label>SYS Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Has_MKT_Investment_Type__c</fullName>
        <label>SYS Has Marketing Investment Type?</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Pre_Approval_Form_Item__c.ASI_HK_CRM_MKT_Sales__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Pre_Approval_Form_Item__c.ASI_HK_CRM_Pre_Approval_Form_Lookup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Sales_Director_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYS Sales Director Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_HK_CRM_Pre_Approval_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Start_Date_Difference__c</fullName>
        <formula>IF(ASI_HK_CRM_Adjusted_Start_Date__c &gt; ASI_HK_CRM_PAF_Start_Date__c, 
IF(
MONTH( ASI_HK_CRM_Adjusted_Start_Date__c ) - MONTH(  ASI_HK_CRM_PAF_Start_Date__c ) = 0, 1,
IF
  (
    DAY( ASI_HK_CRM_Adjusted_Start_Date__c ) &gt;= DAY( ASI_HK_CRM_PAF_Start_Date__c  ),                                   MONTH(ASI_HK_CRM_Adjusted_Start_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c) + 1,
MONTH(ASI_HK_CRM_Adjusted_Start_Date__c) - MONTH(ASI_HK_CRM_PAF_Start_Date__c)
  )
),
IF(
MONTH( ASI_HK_CRM_PAF_Start_Date__c ) - MONTH(  ASI_HK_CRM_Adjusted_Start_Date__c ) = 0, 1,
IF
  (
    DAY( ASI_HK_CRM_PAF_Start_Date__c ) &gt;= DAY( ASI_HK_CRM_Adjusted_Start_Date__c  ),                                   MONTH(ASI_HK_CRM_PAF_Start_Date__c) - MONTH(ASI_HK_CRM_Adjusted_Start_Date__c) + 1,
MONTH(ASI_HK_CRM_PAF_Start_Date__c) - MONTH(ASI_HK_CRM_Adjusted_Start_Date__c)
  )
)
)
+
ABS(
IF(NOT(ISBLANK( ASI_HK_CRM_Adjusted_Start_Date__c )), 
(YEAR(ASI_HK_CRM_Adjusted_Start_Date__c) - YEAR(ASI_HK_CRM_PAF_Start_Date__c))*12, 0
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Start Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYS Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_HK_CRM_Pre_Approval_Forms_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Total_SKU_Value_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Sales Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Total_Investment_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Total_Investment__c</fullName>
        <formula>IF(ASI_HK_CRM_SYS_Total_SKU_Value_1__c = 0, 0, ASI_HK_CRM_Total_Investment_Value__c /  ASI_HK_CRM_SYS_Total_SKU_Value_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Investment%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Temp_WF_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp WF Checking</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>